--- a/0.8/purpur.yml
+++ b/0.8/purpur.yml
@@ -96,6 +96,8 @@ settings:
       second: '%02d second'
       seconds: '%02d seconds'
   blocks:
+    snow:
+      smooth-accumulation-step: 0
     barrel:
       rows: 3
     ender_chest:
@@ -1467,10 +1469,12 @@ world-settings:
           tempt_range: 10.0
         # RC: Enable following emeralds for villager: false => true
         follow-emerald-blocks: true
-        can-be-leashed: false
+        # RC: Enable can be leasehed for villager: false => true
+        can-be-leashed: true
         can-breed: true
         breeding-delay-ticks: 6000
-        clerics-farm-warts: false
+        # RC: Enable can be clearics-farm-warts for villager: false => true
+        clerics-farm-warts: true
         cleric-wart-farmers-throw-warts-at-villagers: true
         bypass-mob-griefing: false
         takes-damage-from-water: false
